--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -58,11 +58,6 @@
   left: -8%;
 }
 
-.hero>* {
-  position: relative;
-  z-index: 2;
-}
-
 .pills {
   display: flex;
   align-items: center;
